# Synapse

./: .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN_LOG.md  PROGRESS.md  README.md  ROADMAP.md  plan.md
.github/workflows/: ci.yml
asg_core/: Cargo.toml  build.rs
asg_core/src/: error.rs  graph.rs  hash.rs  lib.rs  serde.rs
asg_core/tests/: integration_tests.rs
asg_to_upir/: Cargo.toml
asg_to_upir/src/: error.rs  lib.rs  lowering.rs
asg_to_upir/tests/: effect_propagation.rs  lowering_round_trip.rs  poly_adt_roundtrip.rs
aspe_pythonic_v1/: Cargo.toml  README.md  project_to_asg.py  project_to_pythonic.py  pyproject.toml  setup.py  test_aspe.py
aspe_pythonic_v1/aspe/: __init__.py  asg_to_pythonic.py  cli.py  pythonic_to_asg.py
docs/: CLI.md  PHASE3_SUMMARY.md  asg_schema_v1_rationale.md  asg_schema_v2_rationale.md  effect_system_rationale.md
docs/semantics/: core_v0.1.tex  core_v0.1_soundness.md
ethics_checker/: Cargo.toml
formatter_core/: Cargo.toml
formatter_core/src/: lib.rs
formatter_core/tests/: formatter_tests.rs
macro_expander/: Cargo.toml  README.md
macro_expander/src/: lib.rs
parser_core/: Cargo.toml  build.rs
parser_core/src/: ast.rs  core_syntax.lalrpop  error.rs  lib.rs
parser_core/tests/: parser_tests.rs
proof_manager/: Cargo.toml
proof_synthesis_assist/: Cargo.toml  README.md
proof_synthesis_assist/src/: lib.rs
proofs/: core_v0.1_soundness.v
proofs/semantics/: core_v0.1.v
schemas/: asg_schema_v1.proto  asg_schema_v2.proto
synapse_ai_api/: Cargo.toml  README.md  build.rs
synapse_ai_api/proto/: synapseai.proto
synapse_ai_api/src/: main.rs  proto.rs  server.rs
synapse_cli/: Cargo.toml  README.md
synapse_cli/src/: compile.rs  linter.rs  main.rs
synapse_cli/tests/: cli_tests.rs  e2e_pipeline.rs  effect_cli.rs  integration_full.rs
synapse_collab_server/: Cargo.toml  README.md
synapse_collab_server/src/: crdt.rs
synapse_debugger/: Cargo.toml  README.md
synapse_debugger/src/: api.rs  lib.rs
synapse_lsp/: Cargo.toml  README.md
synapse_lsp/src/: main.rs  server.rs
synapse_pkg/: Cargo.toml  README.md
synapse_pkg/src/: cli.rs  install.rs  lib.rs  manifest.rs  registry.rs  resolver.rs
synapse_runtime/: Cargo.toml
synapse_runtime/src/: alloc.rs  io.rs  lib.rs
synapse_tutor/: Cargo.toml  README.md
synapse_tutor/src/: main.rs
synapse_uart/: Cargo.toml  README.md
synapse_uart/src/: config.rs  effects.rs  fault.rs  lib.rs  memory.rs  scheduler.rs
type_checker_l1/: Cargo.toml
type_checker_l1/src/: errors.rs  inference.rs  lib.rs  types.rs  unification.rs
type_checker_l1/tests/: basic_inference.rs
type_checker_l2/: Cargo.toml
type_checker_l2/src/: inference.rs  lib.rs  types.rs
type_checker_l2/tests/: adt_inference.rs  effect_check.rs  poly_inference.rs
type_checker_l3_core/: Cargo.toml
type_checker_l3_full/: Cargo.toml
upir_core/: Cargo.toml
upir_core/src/: attributes.rs  dialects.rs  ir.rs  lib.rs  types.rs
upir_core/tests/: basic_pretty.rs
upir_to_llvm/: Cargo.toml
upir_to_llvm/src/: error.rs  lib.rs  lowering.rs
upir_to_llvm/tests/: lowering_llvm_match.rs  lowering_llvm_minimal.rs
upir_to_qsim/: Cargo.toml
upir_to_qsim/src/: lib.rs
upir_to_spirv/: Cargo.toml
upir_to_spirv/src/: lib.rs
verified_ffi/: Cargo.toml  README.md
verified_ffi/src/: lib.rs
