[package]
name = "asg_core"
version = "0.1.0"
edition = "2021"
description = "Core library for the Abstract Semantic Graph (ASG) used in the Synapse compiler"
authors = ["Synapse Team"]

[dependencies]
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.3"
thiserror = "1.0"

[build-dependencies]
prost-build = "0.11"