[package]
name = "proof_synthesis_assist"
version = "0.1.0"
edition = "2021"

[dependencies]
asg_core = { path = "../asg_core" }
type_checker_l1 = { path = "../type_checker_l1" }
type_checker_l2 = { path = "../type_checker_l2" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"