[package]
name = "synapse_debugger"
version = "0.1.0"
edition = "2021"

[dependencies]
asg_core = { path = "../asg_core" }
synapse_runtime = { path = "../synapse_runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
capnp = "0.15"
crossbeam-channel = "0.5"
dashmap = "5.1" # Thread-safe HashMap