[package]
name = "synapse_uart"
version = "0.1.0"
edition = "2021"

[dependencies]
synapse_runtime = { path = "../synapse_runtime" }
synapse_debugger = { path = "../synapse_debugger" }
thiserror = "1.0"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
dashmap = "5.1"
tokio = { version = "1", features = ["full"], optional = true }
rayon = "1.5"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
metrics = "0.20"
log = "0.4"