[package]
name = "verified_ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
asg_core = { path = "../asg_core" }
upir_core = { path = "../upir_core" }
synapse_uart = { path = "../synapse_uart" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.7"